# maude2lean

./: .gitattributes  CITATION.cff  Makefile  README.md  index.htm  m2l.css  maude2lean.schema.json  pyproject.toml  refctors.htm  refopts.htm  setup.py
maude2lean/: __init__.py  __main__.py  def_extractor.py  diagnostics.py  graph.py  lean.py  maudext.py  special.py
maude2lean/data/: generic_congr.lean  generic_congr.lean4  infer_sub_star.lean  maude2lean.schema.json
test/ninjas/: ninjas.json  ninjas.lean  ninjas.maude  ninjas.toml  ninjas.yaml  proofs.lean
test/peano/: demos.lean  peano.json  peano.lean  peano.maude  peano_defs.json  peano_defs.lean  proofs.lean  proofs_defs.lean
test/philosophers/: philosophers.json  philosophers.lean  philosophers.maude  proofs.lean
test/qlock/: qlock.json  qlock.maude
test/tas/: proof.lean  tas.json  tas.maude  tas_bool.lean
